# agentes-nike-logistica

./: .env.example  .gitignore  ROLES.md  arquitectura_diagrama.drawio  arquitectura_sistema.md  docker-compose.yml  package-lock.json  prompts_config_backend.md  prompts_config_frontend.md  prompts_config_testing_devops.md  prompts_servicio_1_backend.md  prompts_servicio_2_orquestador.md  roles_y_matriz_raci.md  sdd_backend.md  sdd_frontend.md
backend/: Dockerfile  pyproject.toml  startup.sh
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  chat.py  health.py  metrics.py  permissions.py  products.py  stock.py  system.py  tracking.py
backend/app/core/: config.py  database.py  keycloak.py  middleware.py  redis.py  security.py  seed.py  seed_master.py  seed_users.py
backend/app/models/: __init__.py  audit.py  inventory.py  permission.py  user.py
backend/app/repositories/: __init__.py  audit_repository.py  inventory_repository.py  permission_repository.py  user_repository.py
backend/app/schemas/: auth.py
backend/app/services/: chatbot_service.py  metrics_service.py  product_service.py  system_service.py
backend/docs/: api.md
dataset/: Dataset de ventas (sin limpiar).csv  Incluye ventas de zapatillas, reseñas y puntuaciones..csv  Nike Dataset.csv  imap_export.csv  registros de ventas con fechas, regiones y precios.csv
db/: 01_platform_central.sql  02_sede_nike_peru.sql  03_retail_distribuidoras.sql  04_proveedores_fabricas.sql  05_tracking_migration.sql  agentes_nike_logistica_bd.sql  docker-init.sh
(+120 files in other folders)
