[project]
name = "nike-logistica-backend"
version = "0.1.0"
description = "Backend de la plataforma Nike Logística"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "sqlalchemy>=2.0",
    "asyncpg>=0.27",
    "redis>=6.2.0",
    "groq>=0.30.0",
    "sentence-transformers>=5.0.0",
]