[project]
name = "nike-logistica-backend"
version = "0.1.0"
description = "Backend de la plataforma Nike Logística"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "sqlalchemy>=2.0",
    "asyncpg>=0.27",
    "redis>=6.2.0",
    "fastembed>=0.2.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
]